apps/supapanya-frigate/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supapanya-frigate
spec:
  selector:
    app: supapanya-frigate
  ports:
    - port: 5000
      targetPort: 5000
      name: http-web
      protocol: TCP
    - port: 1935
      targetPort: 1935
      name: rtmp
      protocol: TCP
    - port: 8554
      targetPort: 8554
      name: rtsp
      protocol: TCP
    - port: 8555
      targetPort: 8555
      name: go2rtc-tcp
      protocol: TCP
    - port: 8555
      targetPort: 8555
      name: go2rtc-udp
      protocol: UDP
  type: ClusterIP
