apps/supapanya-frigate/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supapanya-frigate-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: supapanya-frigate-tls
      hosts:
        - supapanya-frigate.picturo.us
  rules:
    - host: supapanya-frigate.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supapanya-frigate
                port:
                  number: 5000
